--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Tải Tệp Về Máy</h1>
-        <p>Nhấn vào liên kết bên dưới để tải tệp về máy:</p>
+        <p>Bạn nào có tiền donet cho Hùng<10312004 MB>:</p>
         <a href="game.zip" download>Tải Tệp</a>
     </div>
 </body>
